Foi adicionado um botão de compra

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,27 +11,43 @@
 <body>
     <!--Esse H1 é temporario-->
     <h1>God Of War</h1>
-    
-        <img  src="./SRC/Imagens/gow.png" alt="Logo de God of War" title="God of War 2018" id="logo-titulo">
 
-                <p id="sinopse">"God of War" (2018) é um épico jogo de ação e aventura que redefine a mitologia nórdica através da jornada de Kratos, o temido Deus da Guerra, e seu filho Atreus. Ambientado em um mundo vasto e repleto de perigos, o jogo mergulha os jogadores em uma narrativa emocionante e cheia de reviravoltas.
-                Após os eventos dos jogos anteriores da série, Kratos busca uma vida de paz e redenção nas terras dos deuses nórdicos. Ele agora vive recluso nas terras geladas, tentando escapar de seu passado violento e ocultar sua verdadeira identidade divina de seu filho Atreus.
-                No entanto, quando a esposa de Kratos, Faye, falece, os dois embarcam em uma jornada para cumprir seu último desejo: espalhar suas cinzas no pico mais alto dos Nove Reinos. Esta simples tarefa logo se transforma em uma odisseia perigosa, já que pai e filho são confrontados com deuses, monstros e criaturas misteriosas ao longo do caminho.
-                A relação entre Kratos e Atreus é o cerne da narrativa, evoluindo de uma dinâmica tensa para uma conexão profunda à medida que enfrentam desafios juntos. Kratos, uma vez conhecido por sua fúria implacável, agora luta para controlar sua raiva enquanto orienta seu filho em um mundo hostil e cheio de segredos.
-                Além da narrativa envolvente, "God of War" é aclamado por sua jogabilidade intensa e visceral. Os jogadores enfrentam batalhas épicas contra criaturas mitológicas e chefes colossais, utilizando o machado mágico de Kratos, Leviathan, e as habilidades de combate de ambos os personagens 
-                Com visuais deslumbrantes, uma trilha sonora épica e uma história emocionante, "God of War" (2018) é uma experiência inesquecível que redefine os limites do que um jogo de vídeo pode alcançar.
-                </p>
-        <img src="./SRC/Imagens/barco.png" alt="Kratos e Atreus em uma conoa." title="Canoa.">        
+    <img src="./SRC/Imagens/gow.png" alt="Logo de God of War" title="God of War 2018" id="logo-titulo">
 
-        <div id="carrossel">
-            <img class="imagens-carrossel" src="./SRC/Imagens/kratos.jpg" alt="Imagem do Kratos" title="Kratos.">
-            <img class="imagens-carrossel" src="./SRC/Imagens/atreus.jpeg" alt="Imagem do Atreus" title="Atreus.">
-            <img class="imagens-carrossel" src="./SRC/Imagens/cavalinho.jpeg" alt="Atreus montado nas costas de seu pai" title="Cavalinho.">
-            <img class="imagens-carrossel" src="./SRC/Imagens/pai e filho.jpg" alt="Kratos e Atreu juntos" title="Kratos e Atreus.">
-            <img class="imagens-carrossel" src="./SRC/Imagens/kratos 2.jpg" alt="Imagem de Kratos" title="Kratos.">
-            <img class="imagens-carrossel" src="./SRC/Imagens/atreus2.jpg" alt="Imagem de atreus" title="Atreus">
-        </div>
+    <p id="sinopse">"God of War" (2018) é um épico jogo de ação e aventura que redefine a mitologia nórdica através da
+        jornada de Kratos, o temido Deus da Guerra, e seu filho Atreus. Ambientado em um mundo vasto e repleto de
+        perigos, o jogo mergulha os jogadores em uma narrativa emocionante e cheia de reviravoltas.
+        Após os eventos dos jogos anteriores da série, Kratos busca uma vida de paz e redenção nas terras dos deuses
+        nórdicos. Ele agora vive recluso nas terras geladas, tentando escapar de seu passado violento e ocultar sua
+        verdadeira identidade divina de seu filho Atreus.
+        No entanto, quando a esposa de Kratos, Faye, falece, os dois embarcam em uma jornada para cumprir seu último
+        desejo: espalhar suas cinzas no pico mais alto dos Nove Reinos. Esta simples tarefa logo se transforma em uma
+        odisseia perigosa, já que pai e filho são confrontados com deuses, monstros e criaturas misteriosas ao longo do
+        caminho.
+        A relação entre Kratos e Atreus é o cerne da narrativa, evoluindo de uma dinâmica tensa para uma conexão
+        profunda à medida que enfrentam desafios juntos. Kratos, uma vez conhecido por sua fúria implacável, agora luta
+        para controlar sua raiva enquanto orienta seu filho em um mundo hostil e cheio de segredos.
+        Além da narrativa envolvente, "God of War" é aclamado por sua jogabilidade intensa e visceral. Os jogadores
+        enfrentam batalhas épicas contra criaturas mitológicas e chefes colossais, utilizando o machado mágico de
+        Kratos, Leviathan, e as habilidades de combate de ambos os personagens
+        Com visuais deslumbrantes, uma trilha sonora épica e uma história emocionante, "God of War" (2018) é uma
+        experiência inesquecível que redefine os limites do que um jogo de vídeo pode alcançar.
+    </p>
+    <img src="./SRC/Imagens/barco.png" alt="Kratos e Atreus em uma conoa." title="Canoa.">
 
-    <a href="https://store.steampowered.com/app/1593500/God_of_War/" target="_blank"> Download God of War </a>
+    <div id="carrossel">
+        <img class="imagens-carrossel" src="./SRC/Imagens/kratos.jpg" alt="Imagem do Kratos" title="Kratos.">
+        <img class="imagens-carrossel" src="./SRC/Imagens/atreus.jpeg" alt="Imagem do Atreus" title="Atreus.">
+        <img class="imagens-carrossel" src="./SRC/Imagens/cavalinho.jpeg" alt="Atreus montado nas costas de seu pai"
+            title="Cavalinho.">
+        <img class="imagens-carrossel" src="./SRC/Imagens/pai e filho.jpg" alt="Kratos e Atreu juntos"
+            title="Kratos e Atreus.">
+        <img class="imagens-carrossel" src="./SRC/Imagens/kratos 2.jpg" alt="Imagem de Kratos" title="Kratos.">
+        <img class="imagens-carrossel" src="./SRC/Imagens/atreus2.jpg" alt="Imagem de atreus" title="Atreus">
+    </div>
+
+    <a href="https://store.steampowered.com/app/1593500/God_of_War/" target="_blank">
+     <img src="./SRC/Imagens/botao de compra.png" alt="Botão para comprar o jogo" id="botao-de-compra"></a>
 </body>
+
 </html>
